tests/tests/errors/2000-1.vb
'#compiler-options:/r:TestAssembly.dll /r:TestAssembly1.dll
'#compiler-message:Fatal error BC2000 : compiler initialization failed unexpectedly: Project already has a reference to assembly Test.
'#exit-code:1